Add web interface, docs, and server for payments
Introduces a modern web interface (public/index.html) and Express server (server.js) for sending Interledger payments. Adds multiple documentation files (GUIA_RAPIDA.md, INSTRUCCIONES.md, RESUMEN.md, CHECKLIST.md, ANTES_Y_DESPUES.md, INICIO_RAPIDO.txt) and startup scripts (start.bat, start.sh). Updates .gitignore for better security and project hygiene, and revises README.md to reflect the new web workflow. This upgrade transforms the project from a CLI tool to a user-friendly web application.

--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,28 @@
-# Macs
-.DS_Store
+# Dependencies
+node_modules/
+package-lock.json
+pnpm-lock.yaml
 
-# Logs
-logs
-*.log
-
-# Diagnostic reports (https://nodejs.org/api/report.html)
-report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
-
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-
-*.txt
-
-# Optional eslint cache
-.eslintcache
-
-dist
-
-# IDEs
-.idea/
-.vscode/
-
-# node_modules
-**/node_modules
-
+# Environment variables
 .env
 
+# Private keys
+keys/*.key
+keys/*.pem
+*.key
 *.pem
+
+# Logs
+logs/
+*.log
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
