--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "start:config": "node index.js --from-config"
+    "start:config": "node index.js --from-config",
+    "server": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@inquirer/prompts": "^3.3.0",
-    "@interledger/open-payments": "^6.1.1",
+    "@interledger/open-payments": "^7.1.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.21.2",
     "pino": "^8.16.2",
     "pino-pretty": "^10.2.3"
   }
